--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,29 @@ integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmV
                     </div> 
                     <input type="submit" value="Upload" class="btn btn-primary btn-block">
                 </form>
+
+                <hr>
+                <% if(files){ %>
+                    <% files.forEach(file=> {%>
+                        <div class="card card-body mb-3">
+                            <% if(file.isImage) {%>
+                                <img src="image/<%= file.filename%>" alt="" width="50%">
+                           <% } if(file.isVideo) {%>
+                            <video id='videoPlayer' width="50%" controls  autoplay>
+                                <source src="image/<%= file.filename%>" type="video/mp4" rameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen/>
+                            </video>
+                       <% } else { %>
+                             <%=file.filename%>
+                           <% } %>
+                           <form method="POST" action="/files/<%= file._id %>?_method=DELETE">
+                            <button class="btn btn-danger btn-block mt-4">Delete</button>
+                           </form>
+                         
+                        </div>
+                    <% }) %>
+                    <% } else { %>
+                        <p>No files to display</p>
+                        <% } %>
             </div>
         </div>
     </div>
